--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-daisyui": "^3.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
+    "react-social-login-buttons": "^3.6.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
