--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "react-social-login-buttons": "^3.6.1",
+    "react-tippy": "^1.4.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
