--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "react-social-login-buttons": "^3.6.1",
+    "react-spinners": "^0.13.8",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0"
